Update layout and responsive design

--- a/ui/index.html
+++ b/ui/index.html
@@ -243,15 +243,15 @@
 					<span>海鑫光起降场</span>
 					<img src="images/ksh33.png">
 				</div>
-				<div class="panel-video" id="vehicle-video">
-					<video id="vehicle-demo-video" class="vehicle-demo-video" src="./test.mp4" autoplay muted loop playsinline controls="false"></video>
+				<div class="panel-video" id="vehicle-video-1">
+					<video id="vehicle-demo-video-1" class="vehicle-demo-video" src="./test.mp4" autoplay muted loop playsinline controls="false"></video>
 				</div>
 				<div class="visual_title">
 					<span>中大起降场</span>
 					<img src="images/ksh33.png">
 				</div>
-				<div class="panel-video" id="vehicle-video">
-					<video id="vehicle-demo-video" class="vehicle-demo-video" src="./test.mp4" autoplay muted loop playsinline controls="false"></video>
+				<div class="panel-video" id="vehicle-video-2">
+					<video id="vehicle-demo-video-2" class="vehicle-demo-video" src="./test.mp4" autoplay muted loop playsinline controls="false"></video>
 				</div>
 			</div>
 			<div class="visual_box">
@@ -260,7 +260,7 @@
 					<img src="images/ksh33.png">
 				</div>
 				<div class="record_box" id="flight-records-list"></div>
-				<div id="flight-records-pagination" style="font-size: 12px;position: fixed;bottom: 1.5%;right: 5%;"></div>
+				<div id="flight-records-pagination"></div>
 			</div>
 		</div>
 		<div class="clear"></div>
